# SpondBot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  probe_response.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
examples/: auto_accept_bot.py  list_events.py
jellyfin-sports/poc/: README.md  scrape_and_play.py
spond/: base.py  spond.py
tests/: test_app.py  test_auth.py  test_event_api.py  test_scheduler.py
unraid/: update.sh
webui/: app.py  auth.py  users.py
webui/static/: admin.html  admin.js  app.js  index.html  login.html  login.js  logs.html  logs.js  nav.js  settings.html  settings.js  style.css  timeline.js
