[tool.poetry]
name = "spondbot"
version = "0.1.0"
description = "Web UI that auto-accepts Spond event invites the moment they open."
authors = ["dpremoli"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
aiohttp = ">=3.8.5"
fastapi = ">=0.110.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0"}
pydantic = ">=2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
